fix(basic-3.4): not use tag selectors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <main class="main-content">
       <div id="main-content__add-section">
-        <label for="new-task">Add Item</label>
+        <label class="new-task" for="new-task">Add Item</label>
         <div class="add-section__add-task">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
@@ -47,7 +47,7 @@
           </li>
         </ul>
       </div>
-    </div>
+    </main>
   <script src="app.js"></script>
 </body>
 </html>
