refactor(extended-1.1): used semantic names

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       <a class="header__details" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main-content">
-      <div id="main-content__add-section">
+      <section id="main-content__add-section">
         <label class="new-task" for="new-task">Add Item</label>
         <div class="add-section__add-task">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
-      </div>
-      <div id="incomplete-tasks">
+      </section>
+      <section id="incomplete-tasks">
         <h3>Todo</h3>
         <ul id="incomplete-tasks__list">
           <li>
@@ -34,8 +34,8 @@
             <button class="delete"><img src="./remove.svg"></button>
           </li>
         </ul>
-      </div>
-      <div class="complete-tasks">
+      </section>
+      <section class="complete-tasks">
         <h3>Completed</h3>
         <ul id="completed-tasks">
           <li>
@@ -46,7 +46,7 @@
             <button class="delete"><img src="./remove.svg"></button>
           </li>
         </ul>
-      </div>
+      </section>
     </main>
   <script src="app.js"></script>
 </body>
