--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
   <body>
-    <header class="header"><img src="./eisenhower-matrix.jpg">
+    <header class="header"><img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
       <a class="header__details" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main-content">
@@ -25,13 +25,13 @@
             <label class="task">Pay Bills</label>
             <input type="text" class="task">
             <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg"></button>
+            <button class="delete"><img src="./remove.svg" alt="Delete item"></button>
           </li>
           <li class="editMode"><input type="checkbox">
             <label class="task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task">
             <button class="edit">Save</button>
-            <button class="delete"><img src="./remove.svg"></button>
+            <button class="delete"><img src="./remove.svg" alt="Delete item"></button>
           </li>
         </ul>
       </section>
@@ -43,7 +43,7 @@
             <label class="task">See the Doctor</label>
             <input type="text" class="task">
             <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg"></button>
+            <button class="delete"><img src="./remove.svg" alt="Delete item"></button>
           </li>
         </ul>
       </section>
